Update deprecated URL to URI